v1.2.10 (2018.07.xx)
  - Update SQLite database engine to version 3.24.0
  - Simplify and improve overall performance of Live TV / Recorded TV stream implementation
  - Reduce default Live TV / Recorded TV stream ring buffer size to 1MiB
  - Increase default "DVR stream read operation minimum size" advanced option to 4KiB
  - Add 32KiB option for "DVR stream read operation minimum size" advanced option
  - Rename "Pause discovery while streaming Live TV channels" setting to "Pause discovery tasks while streaming"
  - Apply "Pause discovery tasks while streaming" during playback of Recorded TV streams
  - Fix bug causing discovery tasks to remain paused indefinitely if an error occurs starting a Live TV stream
  - Apply standard URL encoding to device authorization code(s) when querying the backend services
  - Remove "Enable verbose data transfer logs" advanced option

v1.2.9 (2018.07.01)
  - Correct format of SessionID passed to HDHomeRun RECORD engine for Live TV streams
  - (Windows) Build HTTP-only cURL from source instead of using prebuilt static library
  - (Linux/Android/OSX) Switch to HTTP-only prebuilt libcurl static library
  - Add User-Agent string to all HTTP requests in order to identify the PVR client to the backend services
  - Refresh device authorization code(s) immediately if attempt to access EPG data from backend services fails
  - Temporarily disable all EPG data requests if multiple failures accessing the backend services are detected

v1.2.8 (2017.12.29)
  - Update zlib library to version 1.2.11
  - Update cURL library to version 7.57.0
  - Add "Prepend season/episode number to episode name in EPG" setting
  - Add "Enable verbose data transfer logs" advanced setting
  - Add "Disable reporting of real-time MPEG-TS streams" advanced setting
  - Fix logging of HTTP request errors that occurred during multi-step database queries